# Master-Thesis

./: .gitignore  AppendixC.tex  Aufgabenstellung.tex  Danksagung.tex  Introduction.tex  Master.aux  Master.bbl  Master.bcf  Master.blg  Master.fdb_latexmk  Master.fls  Master.lof  Master.out  Master.run.xml  Master.toc  NonAbelianAnyons.tex  Numeric_Implementation.tex  Numerics.tex  README.md  Results.tex  TST_MKL_Eigen.sln  Time-OLD.tex  TimeEvolution.tex  hamil.tex
.github/workflows/: publish.yml
Eval/py/: Adiabatic Time Evolution .py  Color2Val.py  EigenValues_M600_Tres320.csv  Eval_EigenValues.py  Eval_EigenValues_2D.py  Eval_EigenVectors.py  Eval_EigenVectors_1D.py  Eval_EigenVectors_2D.py  Eval_EigenVectors_2D_3D-Scatter.py  Eval_Matrix.py  JobFactory.py  Kitaev_Continuety.py  app.py
Eval/py/interpret/Scripts/: activate  (+7 more)
Evaluation/py/: 3DPLTTST.py  Adiabatic Time Evolution .py  Eval_EigenValues.py  Eval_EigenVectors_1D.py  Eval_EigenVectors_2D.py  Eval_EigenVectors_2D_3D-Scatter.py  Eval_Matrix.py  JobFactory.py  Kitaev_Continuety.py
Mathematika/: Majoranaize.nb  Untitled-1.nb
Simulation/: CMakeLists.txt  Hamiltonian_Diagonalizer_Eigen.hpp  Hamiltonian_Diagonalizer_MAGMA.hpp  Hamiltonian_Diagonalizer_PLASMA.hpp  Hamiltonian_MatrixSparse.hpp  Jobfactory.py  Majorana_Transform.hpp  Majoranize.hpp  Parameters.hpp  Sim_Magma_Solver.hpp  Time_Evolution.hpp  Typedefs.hpp  _1DTopSuperConMatrix.hpp  job_sim.sh  main.cpp  sim.vcxproj  sim.vcxproj.filters
Simulation/cmake/Modules/: CMakeCompilerMachineOption.cmake  FindVTune.cmake  GetCPUSIMDFeatures.cmake
Simulation/cmake/Modules/CMakeCompilerMachineOption/: X64CompilerOptions.cmake
Simulation/cmake/Modules/CMakeHostSystemInformationExtra/: CheckCPUFeature.cmake  win32_cpufeatures.c
TST/: .job_TST.sh.o8308891.swp  .job_TST.sh.o8951457.swp  CMakeLists.txt  EigenValues_M100_Tres16.csv  EigenValues_M12_Tres64.csv  EigenValues_M1600_Tres127.csv  EigenValues_M200_Tres31.csv  EigenValues_M200_Tres32.csv  EigenValues_M200_Tres95.csv  EigenValues_M400_Tres101.csv  EigenValues_M400_Tres31.csv  EigenValues_M400_Tres64.csv  EigenValues_M600_Tres400.csv  EigenValues_M800_Tres127.csv  EigenValues_M800_Tres64.csv  Hamiltonian_Diagonalizer.hpp  Hamiltonian_Diagonalizer_Eigen.hpp  Hamiltonian_Diagonalizer_MAGMA.hpp  Hamiltonian_Diagonalizer_OpenCl.hpp  Hamiltonian_Diagonalizer_PLASMA.hpp  Hamiltonian_Matrix.hpp  Hamiltonian_MatrixSparse.hpp  Jobfactory.py  Magma_Demo.cpp  Magma_Demo_My.cpp  Majorana_Transform.hpp  Majoranize.hpp  Parameters.hpp  TST.vcxproj  TST.vcxproj.filters  TST_Magma_Solver.hpp  Time_Evolution.hpp  Typedefs.hpp  _1DTopSuperConMatrix.hpp  _2DTopSuperConMatrix.hpp  _2DTopSuperConMatrixSparse.hpp  _2DTopSuperConMatrix_DEPRECATED.hpp  conftig.txt  cuSOLVER_Demo.cpp  implicit_euler_Eigen.hpp  (+27 more)
TST.xcodeproj/: project.pbxproj
TST/build_teerm/: CMakeCache.txt
TST/cmake/Modules/: CMakeHostSystemInformationExtra.cmake  FindITT.cmake  FindMKL.cmake
TST/cmake/Modules/CMakeCompilerMachineOption/: ArmCompilerOptions.cmake  X64CompilerOptions.cmake
TST/cmake/Modules/CMakeHostSystemInformationExtra/: CheckCPUFeature.cmake  DetectArmMicroArchitecture.cmake  DetectX64MicroArchitecture.cmake  gcc_cpufeatures.c  win32_cpufeatures.c
TST/cmake/Modules/GetCPUSIMDFeatures/: GetX64SIMDFeatures.cmake
TST/run/: TST
TST/run Time Eval/: Rho_Decay.csv  TST
TST/run Time Eval Release f/: TST
TST/run Time Eval small Release/: TST
TST/run Time Eval vsmall fast2/: TST
TST/run_Time_Eval_Release_G35_Res200/: TST
TST/run_Time_Eval_Release_G35_Res500/: TST
TST/run_Time_Eval_Release_G85_Res500_Th2pi/: TST
TST/rune_G35_Res1000/: Rho_Decay.csv  TST
TST/rune_G35_Res2000/: Rho_Decay.csv  TST
TST/rune_G35_Res4000/: TST
TST/rune_G35_Res500/: Rho_Decay.csv  TST
TST/rune_G35_Res500_NegMu/: DELTA_M14450_Tres85.csv  Rho_Decay.csv  TST
TST/rune_G45_Res500/: Rho_Decay.csv  TST
TST/rune_G55_Res500/: TST
TST/rune_G65_Res500/: TST
TST/rune_G75_Res500/: TST
TST/rune_G85_Res1000/: TST
TST/x64/Debug/: vc142.idb
TST/x64/Debug II/TST.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TST.lastbuildstate  clang-cl.read.1.tlog  link.10708.delete.1.tlog  link.11864.delete.1.tlog  link.16908.delete.1.tlog  link.24104.delete.1.tlog  link.25528.delete.1.tlog  link.27492.delete.1.tlog  link.29040.delete.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TST/x64/Debug/TST.tlog/: TST.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TST/x64/Release II/TST.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TST.lastbuildstate  link.11352.delete.1.tlog  link.11404.delete.1.tlog  link.1180.delete.1.tlog  link.1332.delete.1.tlog  link.13780.delete.1.tlog  link.14208.delete.1.tlog  link.14416.delete.1.tlog  link.16924.delete.1.tlog  link.21668.delete.1.tlog  link.22620.delete.1.tlog  link.23564.delete.1.tlog  link.24104.delete.1.tlog  link.24348.delete.1.tlog  link.24764.delete.1.tlog  link.25184.delete.1.tlog  link.25716.delete.1.tlog  link.26044.delete.1.tlog  link.26276.delete.1.tlog  link.27032.delete.1.tlog  link.27060.delete.1.tlog  link.27680.delete.1.tlog  link.28620.delete.1.tlog  link.28628.delete.1.tlog  link.29112.delete.1.tlog  link.29412.delete.1.tlog  link.29788.delete.1.tlog  link.30040.delete.1.tlog  link.30132.delete.1.tlog  link.30364.delete.1.tlog  link.30588.delete.1.tlog  link.31384.delete.1.tlog  link.3492.delete.1.tlog  link.5540.delete.1.tlog  link.6112.delete.1.tlog  link.6628.delete.1.tlog  link.7068.delete.1.tlog  (+4 more)
TST/x64/Release/TST.tlog/: TST.lastbuildstate
Thesis/: Abstract.tex  Appendix.tex  BIB.bib  BdG.tex  ChiralTopPSuperCond.tex  Cover.tex  Majorana.tex  Master.tex  discussion.tex  topological.tex
Thesis/code/: Hamiltonian_Diagonalizer_Eigen.hpp  Hamiltonian_Matrix.hpp  Time_Evolution.hpp
code/: Defs.hpp  Majorana_Transform.hpp  _2DTopSuperConMatrix.hpp
enc_temp_folder/ba1b6e172c15f3deb591a2cec835a3/: main.cpp
enc_temp_folder/e15485166e31d82aa7bcf2b9b369878/: Hamiltonian_Diagonalizer.hpp
x64/Release II/: EigenValues_M600_Tres101.csv
(+1 files in other folders)
