cmake_minimum_required(VERSION 3.30)
project(sim)

if (FALSE)
    set(CMAKE_THREAD_LIBS_INIT "-pthread")
    set(CMAKE_HAVE_THREADS_LIBRARY 1)
    set(CMAKE_USE_WIN32_THREADS_INIT 0)
    set(CMAKE_USE_PTHREADS_INIT 1)
    set(THREADS_PREFER_PTHREAD_FLAG ON)
endif ()

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")


set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DADD_")
if(APPLE)
    if(NOT LIBOMP_PREFIX)
        execute_process(COMMAND brew --prefix libomp OUTPUT_VARIABLE LIBOMP_PREFIX OUTPUT_STRIP_TRAILING_WHITESPACE ERROR_QUIET)
    endif()
    if(LIBOMP_PREFIX)
        set(OpenMP_C_FLAGS "-Xpreprocessor -fopenmp -I${LIBOMP_PREFIX}/include")
        set(OpenMP_CXX_FLAGS "-Xpreprocessor -fopenmp -I${LIBOMP_PREFIX}/include")
        set(OpenMP_C_LIB_NAMES "omp")
        set(OpenMP_CXX_LIB_NAMES "omp")
        set(OpenMP_omp_LIBRARY "${LIBOMP_PREFIX}/lib/libomp.dylib")
    else()
        message(WARNING "libomp not found. Install it with: brew install libomp")
    endif()
else()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
endif()

set(MKLROOT /opt/intel/mkl/)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUPCASE")

if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "Intel")
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -qopt-report=1 -qopenmp -qopenmp-link static -ipo ") #-inline-forceinline  -qoverride-limits ")   #
    set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -g -qopt-report=1 -debug inline-debug-info -parallel-source-info=2 -qopenmp -qopenmp-link dynamic -shared-intel ") #-inline-forceinline  -qoverride-limits")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")
else ()
    if(NOT APPLE)
        set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -g -shared-libgcc")
    else()
        set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -g")
    endif()
endif ()


set(CMAKE_CXX_STANDARD 14)

add_executable(sim main.cpp)
if (TARGET_ARCHITECTURE)
    include(CMakeHostSystemInformationExtra)
    include(GetCPUSIMDFeatures)
    include(CMakeCompilerMachineOption)
    cmake_compiler_machine_option(ARCHITECTURE_FLAG ${TARGET_ARCHITECTURE})
    message(STATUS "Use compiler option: ${ARCHITECTURE_FLAG}")
    target_compile_options(sim PRIVATE ${ARCHITECTURE_FLAG})
else()
    message(STATUS "No TARGET_ARCHITECTURE set — using -march=native (auto-detect current CPU)")
    target_compile_options(sim PRIVATE -march=native)
endif ()
if (FALSE)
    include(CMakeHostSystemInformationExtra)
    include(GetCPUSIMDFeatures)
    include(CMakeCompilerMachineOption)
    set(CMAKE_HOST_SYSTEM_PROCESSOR "(x86|AMD64)")
    cmake_compiler_machine_option(ARCHITECTURE_FLAG ${TARGET_ARCHITECTURE})
    set(HSI_KNOWN_QUERIES
            NUMBER_OF_LOGICAL_CORES NUMBER_OF_PHYSICAL_CORES TOTAL_VIRTUAL_MEMORY AVAILABLE_VIRTUAL_MEMORY
            TOTAL_PHYSICAL_MEMORY AVAILABLE_PHYSICAL_MEMORY IS_64BIT HAS_FPU HAS_MMX HAS_MMX_PLUS HAS_SSE HAS_SSE2
            HAS_SSE_FP HAS_SSE_MMX HAS_AMD_3DNOW HAS_AMD_3DNOW_PLUS HAS_IA64 HAS_SERIAL_NUMBER
            PROCESSOR_NAME PROCESSOR_DESCRIPTION OS_NAME OS_RELEASE OS_VERSION)
    message("CPU info")
    foreach (_query IN LISTS HSI_KNOWN_QUERIES)
        set(_res)
        cmake_host_system_information(RESULT _res QUERY ${_query})
        message(${_res})
    endforeach ()
    set(vendor)
    set(architecture)
    set(base)
    detect_x64_micro_architecture(vendor architecture base)
    message("vendor ${vendor} architecture ${architecture} base ${base}")
    message(STATUS "Use compiler option: ${ARCHITECTURE_FLAG}")
    message(${ARCHITECTURE_FLAG})

    if (${ARCHITECTURE_FLAG} STREQUAL "-xSSE2")
        set(ARCHITECTURE_FLAG "-msse;-msse2;-msse3;-mssse3;-msse4.1;-msse4.2;-mavx;-mrdrnd;-mf16c;-mavx2;-mfma;-mbmi;-mbmi2")
    endif ()
    message(${ARCHITECTURE_FLAG})
    if (${CMAKE_BUILD_TYPE} EQUAL RELEASE)
        target_compile_options(sim PRIVATE ${ARCHITECTURE_FLAG})
    endif ()
    if (${CMAKE_BUILD_TYPE} STREQUAL RELWITHDEBINFO)
        target_compile_options(sim PRIVATE ${ARCHITECTURE_FLAG})
    endif ()
endif ()
if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "Intel")
    target_compile_definitions(sim PUBLIC ICC)
elseif ("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
    target_compile_definitions(sim PUBLIC GCC)
endif ()

target_compile_definitions(sim PUBLIC MKL_NUM_THREADS=${THREADS})
set(ENV{MKL_NUM_THREADS} ${THREADS})
set(ENV{VECLIB_MAXIMUM_THREADS} ${THREADS})
set(ENV{OMP_NUM_THREADS} ${THREADSHL})
target_compile_definitions(sim PUBLIC OMP_NUM_THREADS=${THREADSHL})
message("Using ${THREADSHL} OMP Thread and ${THREADS} MKL Threads")


target_compile_definitions(sim PUBLIC GRID=${GRID})
target_compile_definitions(sim PUBLIC RAD=${RAD})
target_compile_definitions(sim PUBLIC DIST=${DIST})
target_compile_definitions(sim PUBLIC T_RES=${T_RES})
target_compile_definitions(sim PUBLIC W_RES=${W_RES}*${THREADS})
target_compile_definitions(sim PUBLIC W_START=${W_START})
target_compile_definitions(sim PUBLIC W_END=${W_END})
target_compile_definitions(sim PUBLIC T_C=${T_C})
target_compile_definitions(sim PUBLIC T_ROT=${T_ROT})

if (USE_MAGMA)
    target_compile_definitions(sim PUBLIC USE_MAGMA="")
endif ()
if (USE_GPU)
    target_compile_definitions(sim PUBLIC USE_GPU="")
endif ()
if (VERBOSE)
    target_compile_definitions(sim PUBLIC DEBUG_ACTIVE="")
endif ()
if (TIME_EVOLUTION)
    target_compile_definitions(sim PUBLIC TIME_EVOLUTION="")
endif ()


find_package(Eigen3 3.3.9 REQUIRED NO_MODULE)
target_link_libraries(sim Eigen3::Eigen)
if (${USE_MAGMA})
    find_package(CUDA REQUIRED)
    target_include_directories(sim PUBLIC ${CUDA_INCLUDE_DIRS})
    target_link_libraries(sim ${CUDA_LIBRARIES})
    target_link_libraries(sim ${CUDA_cusolver_LIBRARY})
    include_directories(${CUDA_INCLUDE_DIRS})
    link_directories(${CUDA_LIBRARIES_DIRS})

    find_package(MAGMA REQUIRED)
    include_directories(${MAGMA_INCLUDE_DIRS})
    link_directories(${MAGMA_LIBRARIES_DIRS})
    target_include_directories(sim PUBLIC ${MAGMA_INCLUDE_DIRS})
    target_link_libraries(sim ${MAGMA_LIBRARIES})
endif ()
if(APPLE)
    # Accelerate for BLAS (AMX-accelerated); OpenBLAS for LAPACKE C interface only
    find_library(ACCELERATE_LIBRARY Accelerate REQUIRED)
    set(OPENBLAS_PREFIX /opt/homebrew/opt/openblas)
    find_library(OPENBLAS_LIBRARY openblas HINTS ${OPENBLAS_PREFIX}/lib REQUIRED)
    target_include_directories(sim PUBLIC ${OPENBLAS_PREFIX}/include)
    target_link_libraries(sim ${ACCELERATE_LIBRARY} ${OPENBLAS_LIBRARY})
    target_compile_definitions(sim PUBLIC EIGEN_USE_BLAS EIGEN_USE_LAPACKE)
    message(STATUS "Using Accelerate (BLAS) + OpenBLAS (LAPACKE)")
elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
    set(CMAKE_COMPILER_IS_GNUCC)
    find_package(MKL REQUIRED)
    if (MKL_FOUND)
        include_directories(${MKL_INCLUDE_DIR})
        target_link_libraries(sim ${MKL_LIBRARIES} ${MKL_OPENMP_LIBRARY})
        message("MKL threaded by  ${MKL_OPENMP_LIBRARY}")
    endif ()
elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Intel")
    #set(BLA_VENDOR Intel10_64lp_seq)
    #find_package(LAPACK REQUIRED)
    #target_link_libraries(sim LAPACK::LAPACK)
    find_package(MKL REQUIRED)
    if (MKL_FOUND)
        include_directories(${MKL_INCLUDE_DIR})
        target_link_libraries(sim "-Wl,--start-group" ${MKL_OPENMP_LIBRARY} ";" ${MKL_LIBRARIES} "-Wl,--end-group -liomp5 -lpthread -lm -ldl")
        message("MKL threaded by  ${MKL_LIBRARIES}")
    endif ()
endif()


find_package(OpenMP)
if (OPENMP_FOUND)
    target_link_libraries(sim OpenMP::OpenMP_CXX)
    link_directories(${OpenMP_CXX_LIBRARIES})
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif ()

find_package(Boost 1.70.0 REQUIRED)
if (Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
endif ()

if (${CMAKE_BUILD_TYPE} STREQUAL RelWithDebInfo)
    find_package(ITT REQUIRED)
    if (${ITT_FOUND})
        include_directories(${ITT_INCLUDE_DIRS})
        link_directories(${ITT_LIBRARY_DIRS})

        link_libraries(sim ${ITT_LIBRARIES})
        target_link_libraries(sim ${ITT_LIBRARY_DIRS}/libittnotify.a)
        target_compile_definitions(sim PUBLIC ITT_ACTIVE)
    else ()
        message(WARNING "ITT not found")
    endif ()
endif ()
get_target_property(OUT sim LINK_LIBRARIES)
message(STATUS ${OUT})

find_library(optim sim)
include_directories("/usr/local/include/optim/")

find_package(autodiff)
target_link_libraries(sim autodiff::autodiff)