cmake_minimum_required(VERSION 3.10)
project(TST)

if (FALSE)
    set(CMAKE_THREAD_LIBS_INIT "-pthread")
    set(CMAKE_HAVE_THREADS_LIBRARY 1)
    set(CMAKE_USE_WIN32_THREADS_INIT 0)
    set(CMAKE_USE_PTHREADS_INIT 1)
    set(THREADS_PREFER_PTHREAD_FLAG ON)
endif ()

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")


set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -DADD_")

set(MKLROOT /opt/intel/mkl/)
if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "Intel")
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ")
elseif ("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 ")
endif ()


set(CMAKE_CXX_STANDARD 14)

add_executable(TST main.cpp)

if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "Intel")
    target_compile_definitions(TST PUBLIC ICC)
elseif ("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
    target_compile_definitions(TST PUBLIC GCC)
endif ()

target_compile_definitions(TST PUBLIC MKL_NUM_THREADS=${THREADS})
set(ENV{MKL_NUM_THREADS} ${THREADS})
set(ENV{VECLIB_MAXIMUM_THREADS} ${THREADS})
set(ENV{OMP_NUM_THREADS} ${THREADSHL})
target_compile_definitions(TST PUBLIC OMP_NUM_THREADS=${THREADSHL})
message("Using ${THREADSHL} OMP Thread and ${THREADS} MKL Threads")


target_compile_definitions(TST PUBLIC GRID=${GRID})
target_compile_definitions(TST PUBLIC T_RES=${T_RES})
target_compile_definitions(TST PUBLIC W_RES=${W_RES}*${THREADS})
target_compile_definitions(TST PUBLIC W_START=${W_START})
target_compile_definitions(TST PUBLIC W_END=${W_END})
target_compile_definitions(TST PUBLIC T_C=${T_C})
target_compile_definitions(TST PUBLIC T_ROT=${T_ROT})

if (USE_MAGMA)
    target_compile_definitions(TST PUBLIC USE_MAGMA="")
endif ()
if (USE_GPU)
    target_compile_definitions(TST PUBLIC USE_GPU="")
endif ()
if (VERBOSE)
    target_compile_definitions(TST PUBLIC DEBUG_ACTIVE="")
endif ()
if (TIME_EVOLUTION)
    target_compile_definitions(TST PUBLIC TIME_EVOLUTION="")
endif ()


find_package(Eigen3 3.3.9 REQUIRED NO_MODULE)
target_link_libraries(TST Eigen3::Eigen)
if (${USE_MAGMA})
    find_package(CUDA REQUIRED)
    target_include_directories(TST PUBLIC ${CUDA_INCLUDE_DIRS})
    target_link_libraries(TST ${CUDA_LIBRARIES})
    target_link_libraries(TST ${CUDA_cusolver_LIBRARY})
    include_directories(${CUDA_INCLUDE_DIRS})
    link_directories(${CUDA_LIBRARIES_DIRS})

    find_package(MAGMA REQUIRED)
    include_directories(${MAGMA_INCLUDE_DIRS})
    link_directories(${MAGMA_LIBRARIES_DIRS})
    target_include_directories(TST PUBLIC ${MAGMA_INCLUDE_DIRS})
    target_link_libraries(TST ${MAGMA_LIBRARIES})
endif ()
if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
    set(CMAKE_COMPILER_IS_GNUCC)
    find_package(MKL REQUIRED)
    if (MKL_FOUND)
        include_directories(${MKL_INCLUDE_DIR})
        target_link_libraries(TST ${MKL_LIBRARIES} ${MKL_OPENMP_LIBRARY})
        message("MLK threaded by  ${MKL_OPENMP_LIBRARY}")

    endif ()
endif ()
if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "Intel")

    #set(BLA_VENDOR Intel10_64lp_seq)
    #find_package(LAPACK REQUIRED)
    #target_link_libraries(TST LAPACK::LAPACK)
    find_package(MKL REQUIRED)
    if (MKL_FOUND)
        include_directories(${MKL_INCLUDE_DIR})
        target_link_libraries(TST "-Wl,--start-group" ${MKL_OPENMP_LIBRARY} ";" ${MKL_LIBRARIES} "-Wl,--end-group -liomp5 -lpthread -lm -ldl")
        message("MLK threaded by  ${MKL_LIBRARIES}")
    endif ()
endif ()


find_package(OpenMP)
if (OPENMP_FOUND)
    target_link_libraries(TST OpenMP::OpenMP_CXX)
    link_directories(${OpenMP_CXX_LIBRARIES})
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif ()

find_package(Boost 1.70.0 REQUIRED)
if (Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
endif ()